Fix address display on mobile size

--- a/src/styles/ProdView.module.css
+++ b/src/styles/ProdView.module.css
@@ -364,7 +364,7 @@
   }
 
   .userInfo .text {
-    width: 50%;
+    width: 100%;
   }
 
   .header {
